# fabric-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  fabric-openapi.yaml  manifest.json  pyproject.toml
.github/workflows/: docker-publish.yml
src/fabric_client/: __init__.py  _compat.py  client.py  exceptions.py  http.py  models.py
src/fabric_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_client_content.py  test_client_files.py  test_client_resources.py  test_exceptions.py  test_http.py  test_models.py  test_sync_client.py
tests/mcp/: conftest.py  test_server.py
