[project]
name = "fabric-client"
version = "0.1.0"
description = "Python client for the Fabric (fabric.so) v2 REST API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fabric_client", "src/fabric_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real Fabric API key (deselect with '-m not integration')",
]

[tool.ruff]
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
